crates/reap-pm-live/tests/ui/fixed_evidence_runner_rejects_backend_selection.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
 --> tests/ui/fixed_evidence_runner_rejects_backend_selection.rs:2:13
  |
2 |     let _ = reap_pm_live::run_pm_action_path_evidence("sealed");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -------- unexpected argument of type `&'static str`
  |
note: function defined here
 --> src/evidence.rs
  |
  | pub fn run_pm_action_path_evidence() -> Result<String, PmEvidenceError> {
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: remove the extra argument
  |
2 -     let _ = reap_pm_live::run_pm_action_path_evidence("sealed");
2 +     let _ = reap_pm_live::run_pm_action_path_evidence();
  |
